# kivy_rest

./: .gitignore  LICENSE.md  README.md  buildozer.spec  pyproject.toml  requirements.txt  version_util.py
.github/workflows/: main.yml
kivy_resource/: __init__.py  apputils.py  client.py  main.ini  main.py  mainapp.kv  version.py
kivy_resource/AboutScreen/: about_screen.py
kivy_resource/BookEditScreen/: book_edit_screen.py
kivy_resource/BookListScreen/: book_list_screen.py
kivy_resource/LoginScreen/: login_screen.kv  login_screen.py
kivy_resource/ResourceEditScreen/: resource_edit_screen.kv  resource_edit_screen.py
kivy_resource/ResourceListScreen/: resource_list_screen.kv  resource_list_screen.py
kivy_resource/View/: __init__.py
kivy_resource/View/AboutScreen/: about_screen.py
kivy_resource/View/BookEditScreen/: book_edit_screen.py
kivy_resource/View/BookListScreen/: book_list_screen.kv  book_list_screen.py
src/: apputils.py  main.py  mainapp.kv
src/View/: __init__.py
src/View/AboutScreen/: about_screen.kv
src/View/BookEditScreen/: book_edit_screen.kv  book_edit_screen.py
src/View/BookListScreen/: book_list_screen.kv  book_list_screen.py
src/View/LoginScreen/: login_screen.kv  login_screen.py
tests/: conftest.py  test_app.py  test_client.py
